// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav/> render when logged in 1`] = `
.c2 {
  position: relative;
}

.c5 {
  position: absolute;
  left: auto;
  right: 0;
  z-index: 1000;
  padding: 0.5rem;
  margin: 0.125rem 0 0;
  font-size: 1rem;
  white-space: nowrap;
  background-color: #f9f9f9;
  border: 1px solid rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  display: none;
}

.c1 {
  font-size: 1.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5;
  padding: 0.5rem 0.75rem;
  font-weight: 500;
  color: #4a4a4a;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  display: none;
}

.c3:hover {
  color: #707070;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3:active {
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
}

.c3.active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  -webkit-flex-wrap: 1;
  -ms-flex-wrap: 1;
  flex-wrap: 1;
  margin-bottom: 0.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (max-width:630px) {
  .c1 {
    display: none;
  }
}

@media (max-width:630px) {
  .c4 {
    z-index: 1000;
    display: none;
    position: absolute;
    background-color: white;
    border: 1px solid lightgray;
    top: 100%;
    right: 0;
  }
}

@media (max-width:630px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<nav
  className="c0"
>
  <a
    className="better-nav-item pb-1 pt-1 pl-0 pr-0 fw-normal"
    href="/"
    onClick={[Function]}
  >
    <svg
      className="mr-1 fill-text-color "
      version="1.1"
      viewBox="0 0 512 512"
      width="40px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M436.6,87.8c-0.9,0.1-1.9,2.7-3.7,7.9c-2.8,8.1-4.3,14.3-5.2,18.3c-1.4,5.6-3,12.1-5.2,18.8c-2.7,7.9-4.2,12.5-7.7,18.2
        c-4,6.3-8.2,10.6-10.6,13c-2.7,2.7-8,7.5-15.8,12.3c-4.9,3-12.4,6.9-22.3,10c-8.9,2.7-16.9,4.6-24.2,5.9c-2.8,0.5-7.5,1.3-16.4,2.3
        c-5.3,0.6-19.8,2.1-43.9,2.9c-6.7,0.2-15.4,0.4-25.6,0.5c-10.2,0-18.9-0.3-25.6-0.5c-24-0.8-38.5-2.3-43.9-2.9
        c-8.9-1-13.5-1.7-16.4-2.3c-7.3-1.3-15.3-3.2-24.2-5.9c-9.9-3-17.3-6.9-22.3-10c-7.8-4.8-13.1-9.6-15.8-12.3
        c-2.4-2.4-6.6-6.6-10.6-13c-3.6-5.7-5.1-10.3-7.7-18.2c-2.3-6.6-3.8-13.2-5.2-18.8c-1-4-2.4-10.2-5.2-18.3c-1.8-5.2-2.8-7.9-3.7-7.9
        c-4.1-0.3-13.2,23.2-12.1,47.4c0.3,7.5,1.4,25.9,14.4,44.9c10.2,14.8,23.4,23.8,31.6,29.4c10.6,7.2,14.1,7.4,19.7,11.5
        c12.4,9.2,14.8,20.5,22.4,60c6,30.9,11.1,64,22,95.4c2.5,7.3,6.6,27.5,22.5,40.9c7.4,6.2,16.6,10.8,16.6,10.8
        c3.2,1.6,11.6,5.5,23.4,7.8c7.4,1.4,14.1,1.9,20.1,1.8c5.9,0.1,12.7-0.4,20.1-1.8c11.8-2.3,20.2-6.2,23.4-7.8c0,0,9.2-4.6,16.6-10.8
        c15.9-13.4,20-33.6,22.5-40.9c10.9-31.4,16-64.5,22-95.4c7.6-39.6,10.1-50.9,22.4-60c5.6-4.1,9.1-4.3,19.7-11.5
        c8.2-5.6,21.4-14.5,31.6-29.4c13-19,14.1-37.4,14.4-44.9C449.7,110.9,440.6,87.5,436.6,87.8z M333.2,258.7
        c-7.1,53.7-13.8,82-24.6,107.8c-0.4,1.1-1.3,3.3-2.9,6.1c-5.1,9.2-13.1,24.4-31,30.8c-18.3,6.6-36.3,0.3-37.3,0
        c-17.9-6.4-25.9-21.6-31-30.8c-1.6-2.8-2.5-5.1-2.9-6.1c-10.8-25.7-17.5-54.1-24.6-107.8c-1.3-10.1-2.3-18,3.7-22.9
        c6.5-5.3,15.5-4,38.4-3.2c20.4,0.7,49.6,0.7,70,0c23-0.8,31.9-2.1,38.4,3.2C335.4,240.7,334.5,248.6,333.2,258.7z"
      />
    </svg>
    <span
      className="c1"
    >
      Recipe Yak
    </span>
  </a>
  <div
    className="d-flex align-center p-relative justify-content-center flex-wrap"
  >
    <div
      className="c2"
    >
      <a
        className="c3"
        onClick={[Function]}
      >
        Menu 
        <svg
          className="fill-text-color"
          style={
            Object {
              "width": "1.5em",
            }
          }
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M14.1711599,9.3535 L9.99925636,13.529 L5.82735283,9.3535 C5.51262415,9.0385 5.73543207,8.5 6.18054835,8.5 L13.8179644,8.5 C14.2630807,8.5 14.4858886,9.0385 14.1711599,9.3535"
              fill="inherit"
            />
          </g>
        </svg>
      </a>
      <div
        className="c4"
      >
        <a
          className="better-nav-item "
          href="/recipes/add"
          onClick={[Function]}
        >
          Add
        </a>
        <div
          className="c2"
        >
          <a
            className="better-nav-item"
            onClick={[Function]}
            tabIndex={0}
          >
            <span>
              Teams
            </span>
            <svg
              className="fill-text-color"
              style={
                Object {
                  "width": "1.5em",
                }
              }
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M14.1711599,9.3535 L9.99925636,13.529 L5.82735283,9.3535 C5.51262415,9.0385 5.73543207,8.5 6.18054835,8.5 L13.8179644,8.5 C14.2630807,8.5 14.4858886,9.0385 14.1711599,9.3535"
                  fill="inherit"
                />
              </g>
            </svg>
          </a>
          <div
            className="c5"
          >
            <p>
              Loading...
            </p>
            <a
              className="mt-1 "
              href="/t/create"
              onClick={[Function]}
            >
              Create a Team
            </a>
          </div>
        </div>
        <div
          className="c2"
        >
          <a
            className="better-nav-item"
            onClick={[Function]}
            tabIndex={0}
          >
            <span>
              Notifications
            </span>
            <svg
              className="fill-text-color"
              style={
                Object {
                  "width": "1.5em",
                }
              }
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M14.1711599,9.3535 L9.99925636,13.529 L5.82735283,9.3535 C5.51262415,9.0385 5.73543207,8.5 6.18054835,8.5 L13.8179644,8.5 C14.2630807,8.5 14.4858886,9.0385 14.1711599,9.3535"
                  fill="inherit"
                />
              </g>
            </svg>
          </a>
          <div
            className="c5"
          >
            <p
              className="text-muted text-small align-self-center"
            >
              Loading...
            </p>
          </div>
        </div>
        <a
          className="better-nav-item "
          href="/recipes"
          onClick={[Function]}
        >
          Browse
        </a>
        <a
          className="better-nav-item "
          href="/schedule/recipes"
          onClick={[Function]}
        >
          Schedule
        </a>
      </div>
    </div>
    <div
      className="c2"
    >
      <img
        alt=""
        className="user-profile-image better-nav-item p-0"
        onClick={[Function]}
        src=""
        tabIndex={0}
      />
      <div
        className="c5"
      >
        <p
          className="bold"
        >
          
        </p>
        <div
          className="d-flex align-center p-1-0"
        >
          <label
            className="d-flex align-items-center cursor-pointer"
          >
            <input
              checked={false}
              className="mr-2"
              onChange={[Function]}
              type="checkbox"
            />
            Dark Mode
          </label>
        </div>
        <p>
          <a
            className="p-1-0"
            href="/settings"
            onClick={[Function]}
          >
            Settings
          </a>
        </p>
        <button
          className="my-button w-100 is-normal"
          onClick={[Function]}
        >
          Logout
        </button>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<Nav/> renders default 1`] = `
.c1 {
  font-size: 1.5rem;
}

.c0 {
  -webkit-flex-wrap: 1;
  -ms-flex-wrap: 1;
  flex-wrap: 1;
  margin-bottom: 0.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (max-width:630px) {
  .c1 {
    display: none;
  }
}

<nav
  className="c0"
>
  <a
    className="better-nav-item pb-1 pt-1 pl-0 pr-0 fw-normal"
    href="/"
    onClick={[Function]}
  >
    <svg
      className="mr-1 fill-text-color "
      version="1.1"
      viewBox="0 0 512 512"
      width="40px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M436.6,87.8c-0.9,0.1-1.9,2.7-3.7,7.9c-2.8,8.1-4.3,14.3-5.2,18.3c-1.4,5.6-3,12.1-5.2,18.8c-2.7,7.9-4.2,12.5-7.7,18.2
        c-4,6.3-8.2,10.6-10.6,13c-2.7,2.7-8,7.5-15.8,12.3c-4.9,3-12.4,6.9-22.3,10c-8.9,2.7-16.9,4.6-24.2,5.9c-2.8,0.5-7.5,1.3-16.4,2.3
        c-5.3,0.6-19.8,2.1-43.9,2.9c-6.7,0.2-15.4,0.4-25.6,0.5c-10.2,0-18.9-0.3-25.6-0.5c-24-0.8-38.5-2.3-43.9-2.9
        c-8.9-1-13.5-1.7-16.4-2.3c-7.3-1.3-15.3-3.2-24.2-5.9c-9.9-3-17.3-6.9-22.3-10c-7.8-4.8-13.1-9.6-15.8-12.3
        c-2.4-2.4-6.6-6.6-10.6-13c-3.6-5.7-5.1-10.3-7.7-18.2c-2.3-6.6-3.8-13.2-5.2-18.8c-1-4-2.4-10.2-5.2-18.3c-1.8-5.2-2.8-7.9-3.7-7.9
        c-4.1-0.3-13.2,23.2-12.1,47.4c0.3,7.5,1.4,25.9,14.4,44.9c10.2,14.8,23.4,23.8,31.6,29.4c10.6,7.2,14.1,7.4,19.7,11.5
        c12.4,9.2,14.8,20.5,22.4,60c6,30.9,11.1,64,22,95.4c2.5,7.3,6.6,27.5,22.5,40.9c7.4,6.2,16.6,10.8,16.6,10.8
        c3.2,1.6,11.6,5.5,23.4,7.8c7.4,1.4,14.1,1.9,20.1,1.8c5.9,0.1,12.7-0.4,20.1-1.8c11.8-2.3,20.2-6.2,23.4-7.8c0,0,9.2-4.6,16.6-10.8
        c15.9-13.4,20-33.6,22.5-40.9c10.9-31.4,16-64.5,22-95.4c7.6-39.6,10.1-50.9,22.4-60c5.6-4.1,9.1-4.3,19.7-11.5
        c8.2-5.6,21.4-14.5,31.6-29.4c13-19,14.1-37.4,14.4-44.9C449.7,110.9,440.6,87.5,436.6,87.8z M333.2,258.7
        c-7.1,53.7-13.8,82-24.6,107.8c-0.4,1.1-1.3,3.3-2.9,6.1c-5.1,9.2-13.1,24.4-31,30.8c-18.3,6.6-36.3,0.3-37.3,0
        c-17.9-6.4-25.9-21.6-31-30.8c-1.6-2.8-2.5-5.1-2.9-6.1c-10.8-25.7-17.5-54.1-24.6-107.8c-1.3-10.1-2.3-18,3.7-22.9
        c6.5-5.3,15.5-4,38.4-3.2c20.4,0.7,49.6,0.7,70,0c23-0.8,31.9-2.1,38.4,3.2C335.4,240.7,334.5,248.6,333.2,258.7z"
      />
    </svg>
    <span
      className="c1"
    >
      Recipe Yak
    </span>
  </a>
  <div
    className="d-flex hide-sm"
  >
    <a
      className="better-nav-item "
      href="/login"
      onClick={[Function]}
    >
      Login
    </a>
    <a
      className="better-nav-item "
      href="/signup"
      onClick={[Function]}
    >
      Signup
    </a>
  </div>
</nav>
`;
